--- a/app/src/main/res/layout/row.xml
+++ b/app/src/main/res/layout/row.xml
@@ -14,6 +14,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/tv2"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="start"
@@ -23,6 +24,7 @@
             android:textColor="#ff0000"/>
 
         <TextView
+            android:id="@+id/tv3"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:gravity="end"
@@ -34,6 +36,7 @@
 
 
     <TextView
+        android:id="@+id/tv4"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="@style/TextAppearance.AppCompat.Medium"
